@@ -1,0 +1,13 @@
+package net.sf.jrtps.udds.hello;
+
+import java.util.List;
+
+import net.sf.jrtps.Sample;
+import net.sf.jrtps.SampleListener;
+
+public class ExternalizableHelloListener implements SampleListener<ExternalizableHelloMessage> {
+	@Override
+	public void onSamples(List<Sample<ExternalizableHelloMessage>> samples) {
+		System.out.println("*** Got samples: " + samples);
+	}
+}
